public/styles/category.css
body {
  background-image: url("/images/category-background.jpg");
  background-size: cover;
}

[popover] {
  border-radius: 5px;
  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.549);
}

form > div {
  background-color: #f1f1f1;
  padding: 1rem;
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 10px;
}

form > div > p {
  font-size: 1.2rem;
}

form button {
  background-color: #b0a8b9;
  border: none;
  border-radius: 5px;
  font-size: 1.1rem;
  padding: 0.4rem 0.8rem;
  transition: background-color 200ms ease;
  cursor: pointer;
  &:hover {
    background-color: #9b94a2;
  }
}

:popover-open {
  inset: unset;
  top: 1rem;
  left: 50%;
  transform: translateX(-50%);
}

:popover-open::backdrop {
  backdrop-filter: blur(3px);
}

main {
  display: flex;
  flex-direction: column;
  gap: 50px;
  margin-top: 1rem;
  padding: 1rem;
}

.dropdown {
  position: relative;
  align-self: end;
  &.hidden {
    display: none;
  }
}

.dropdown:hover .dropdown-content {
  display: block;
}

.dropdown:hover .dropbtn {
  background-color: gray;
}

.dropbtn {
  cursor: pointer;
  transition: background-color 200ms ease;
  border: none;
  border-radius: 5px;
  background: none;
}

.dropbtn img {
  width: 35px;
}

.dropdown-content {
  display: none;
  position: absolute;
  right: 0;
  background-color: #f1f1f1;
  border-radius: 5px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
}

.dropdown-content > * {
  cursor: pointer;
  color: black;
  display: block;
  padding: 1rem 2rem;
  border: none;
  border-radius: 5px;
  background: none;
  text-decoration: none;
  font-size: 1rem;
  transition: background-color 200ms ease;
}

.dropdown-content > *:hover {
  background-color: #ddd;
}

main > hr {
  width: 100%;
  border-color: #c8c5c5;
  border-top: 1px;
}

.category {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.category > h2 {
  font-size: 4rem;
  font-weight: 500;
  color: #fff;
  text-shadow: 0 0 10px black;
}

.category > img {
  aspect-ratio: 16 / 9;
  width: 50%;
  border-radius: 5px;
  object-fit: cover;
  object-position: center 65%;
  box-shadow: 0px 0px 10px black;
}

.empty {
  padding: 1rem;
  font-size: 2rem;
  border-radius: 5px;
  text-align: center;
  color: white;
  font-weight: 500;
  background-color: rgba(0, 0, 0, 0.368);
}

.items {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
  gap: 20px;
}

.card {
  position: relative;
  overflow: hidden;
  backdrop-filter: blur(20px);
  text-decoration: none;
}

.card::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  box-shadow: inset 0 0 2000px rgba(255, 255, 255, 0.3);
  filter: blur(20px);
}

.item-card {
  display: flex;
  justify-content: space-between;
  gap: 20px;
  padding: 0.5rem;
  border-radius: 5px;
  transition: transform 200ms ease;
  box-shadow: 5px 5px 20px black;
  &:hover {
    transform: scale(1.01);
  }
}

.item-card > .item-text {
  color: black;
  display: grid;
  grid-template-columns: 1fr;
  grid-auto-rows: min-content 1fr min-content;
  gap: 10px;
  z-index: 1;
  flex: 1;
}

.item-text > .item-name {
  font-size: 1.2rem;
}

.item-text > .item-description {
  color: rgb(54, 53, 53);
}

.item-text > .item-price {
  justify-self: end;
}

.image {
  z-index: 1;
}

.image > img {
  width: 170px;
  object-fit: cover;
  border-radius: 5px;
  aspect-ratio: 1 / 1;
}

